changes only on v1.2 version
