# public/doc/openapi-3-v1.2.json
@@ -932,6 +932,9 @@
         "parameters": [
           {
             "$ref": "#/components/parameters/ID"
+          },
+          {
+            "$ref": "#/components/parameters/ShowDiscarded"
           }
         ],
         "responses": {
@@ -3323,6 +3326,16 @@
         "required": false,
         "schema": {
           "type": "string"
+        }
+      },
+      "ShowDiscarded": {
+        "in": "query",
+        "name": "showDiscarded",
+        "required": false,
+        "description": "Whether or not to display the discarded result.",
+        "schema": {
+          "type": "boolean",
+          "default": false
         }
       }
     },
